fix alignment

--- a/blocks/v2-dealer-locator-teaser/v2-dealer-locator-teaser.css
+++ b/blocks/v2-dealer-locator-teaser/v2-dealer-locator-teaser.css
@@ -1,3 +1,11 @@
+.redesign-v2 .section div.v2-dealer-locator-teaser-wrapper {
+  padding: 40px 0;
+}
+
+.redesign-v2 .section div.v2-dealer-locator-teaser-wrapper:only-child {
+  padding: 0;
+}
+
 .v2-dealer-locator-teaser {
   height: 509px;
   display: flex;
@@ -55,6 +63,10 @@
 }
 
 @media (min-width: 744px) {
+  .redesign-v2 .section div.v2-dealer-locator-teaser-wrapper {
+    padding: 56px 0;
+  }
+
   .v2-dealer-locator-teaser {
     height: 665px;
   }
@@ -65,6 +77,10 @@
 }
 
 @media (min-width: 1200px) {
+  .redesign-v2 .section div.v2-dealer-locator-teaser-wrapper {
+    padding: 136px 0;
+  }
+
   .v2-dealer-locator-teaser {
     align-items: center;
     height: 792px;
